start transaction controller tests